samples/_failures_safe/1761215495_6cb13a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eea45891.c: In function ‘main’:
./samples/SAFE/__tmp_eea45891.c:131:5: error: expected expression at end of input
  131 |     addEdge(graph,
      |     ^~~~~~~
./samples/SAFE/__tmp_eea45891.c:131:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_eea45891.c:35:6: note: declared here
   35 | void addEdge(struct Graph *graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_eea45891.c:131:5: error: expected declaration or statement at end of input
  131 |     addEdge(graph,
      |     ^~~~~~~
